--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -15,11 +15,17 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tamagui/animations-react-native": "^1.132.25",
+    "@tamagui/babel-plugin": "^1.132.25",
+    "@tamagui/config": "^1.132.25",
+    "@tamagui/core": "^1.132.25",
+    "@tamagui/metro-plugin": "^1.132.25",
     "expo": "~54.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.6",
     "expo-splash-screen": "~31.0.10",
@@ -34,13 +40,15 @@
     "react-native": "0.81.4",
     "react-native-appwrite": "^0.13.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-reanimated": "^4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "tailwindcss": "^3.4.17"
+    "react-native-worklets": "^0.5.1",
+    "tailwindcss": "^3.4.17",
+    "tamagui": "^1.132.25",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
