feat: implement authentication screens with login and registration
- Add login screen with email/password authentication
- Add registration screen with form validation
- Implement secure input handling with show/hide password
- Add proper form validation using Zod schemas
- Integrate with Appwrite authentication service
- Fix duplicate input ID warnings with page-specific prefixes
- Add responsive design with Tamagui components
- Include proper navigation between auth screens
- Add book texture SVG asset for visual enhancement
- Update dependencies for authentication functionality

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tamagui/babel-plugin": "^1.132.25",
     "@tamagui/config": "^1.132.25",
     "@tamagui/core": "^1.132.25",
+    "@tamagui/lucide-icons": "^1.132.25",
     "@tamagui/metro-plugin": "^1.132.25",
     "expo": "~54.0.8",
     "expo-constants": "~18.0.9",
@@ -41,8 +42,9 @@
     "react-native-appwrite": "^0.13.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.13.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "^0.5.1",
