--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
+    "init-db": "node ./scripts/init-database.mjs",
+    "cleanup-db": "node ./scripts/cleanup-database.mjs",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -21,6 +23,7 @@
     "@tamagui/core": "^1.132.25",
     "@tamagui/lucide-icons": "^1.132.25",
     "@tamagui/metro-plugin": "^1.132.25",
+    "dotenv": "^17.2.2",
     "expo": "~54.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
@@ -35,6 +38,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
     "nativewind": "^4.2.1",
+    "node-appwrite": "^19.0.0",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
     "react-dom": "19.1.0",
