feat: update project configuration and build setup
- Update metro.config.cjs with proper React Native configuration
- Update babel.config.js for Expo and Tamagui support
- Update app.json with proper Expo configuration
- Update package.json with new dependencies and scripts
- Update yarn.lock with latest dependency resolutions
- Update Tamagui configuration for UI components

--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "organic-farmquest-ai",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.svg",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "scheme": "organic-farmquest-ai",
     "splash": {
-      "image": "./assets/icon.svg",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#E8F5E8"
     },
@@ -21,7 +21,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.svg",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#E8F5E8"
       },
       "package": "com.organicfarmquest.ai"
