--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "organic_farmquest_ai",
   "main": "expo-router/entry",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -11,10 +10,15 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --watchAll=false"
   },
   "dependencies": {
-    "@ai-sdk/google": "^2.0.14",
+    "@ai-sdk/google": "^2.0.15",
+    "@ai-sdk/react": "^2.0.48",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -25,7 +29,8 @@
     "@tamagui/core": "^1.132.25",
     "@tamagui/lucide-icons": "^1.132.25",
     "@tamagui/metro-plugin": "^1.132.25",
-    "ai": "^5.0.47",
+    "ai": "^5.0.48",
+    "appwrite": "^20.0.0",
     "axios": "^1.12.2",
     "dotenv": "^17.2.2",
     "expo": "~54.0.8",
@@ -35,7 +40,7 @@
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.6",
+    "expo-router": "~6.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -48,22 +53,30 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-appwrite": "^0.13.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "^4.1.0",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17",
     "tamagui": "^1.132.25",
-    "zod": "^4.1.9"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "jest": "^30.1.3",
+    "jest-environment-node": "^30.1.2",
+    "react-test-renderer": "^19.1.1",
+    "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.2"
   },
