--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ yarn-error.*
 # local env files
 .env*
 .env*.local
+# Allow .env.example to be committed
+!.env.example
 
 # typescript
 *.tsbuildinfo
